--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -3,5 +3,6 @@
 @forward "headings";
 @forward "site-header";
 @forward "navigation";
-@forward "forms";
+@forward "testimonial-grid";
+// @forward "forms";
 @forward "site-footer";
